--- a/src/containers/Home/Home.less
+++ b/src/containers/Home/Home.less
@@ -1,33 +1,51 @@
-@import '../../theme/variables.less';
+html {
+    box-sizing: border-box;
+    font-size: 10px;
+    background: linear-gradient(45deg, #42a5f5 0%, #478ed1 50%, #0d47a1 100%);
+}
 
-.index {
-  display: flex;
-  width: 40%;
-  margin: 50px auto;
-  padding: 10px;
-  background: #333;
-  border: 1px solid #000;
-  border-radius: 2px;
-  text-align: center;
-  box-sizing: border-box;
-  code{
-    padding: 3px 6px;
-    color: #000;
-    background: #fff;
-    font-size: 14px;
-  }
-  .notice{
-    margin: 20px auto;
-    padding: 15px 0;
-    text-align: center;
-    border: 1px solid #000;
-    border-width: 1px 0;
-    background: #666;
-    .test{
-      background: @color;
+#pageHome {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    .timerControls {
+        display: flex;
+        .timerButton {
+            flex: 1;
+            background: none;
+            border: 0;
+            cursor: pointer;
+            color: white;
+            font-size: 2rem;
+            text-transform: uppercase;
+            background: rgba(0, 0, 0, 0.1);
+            border-bottom: 3px solid rgba(0, 0, 0, 0.2);
+            border-right: 1px solid rgba(0, 0, 0, 0.2);
+            padding: 1rem;
+            font-family: 'Inconsolata', monospace;
+            &:hover,
+            &:focus {
+                background: rgba(0, 0, 0, 0.2);
+                outline: 0;
+            }
+        }
     }
-  }
-  #good{
-    color: green;
-  }
+    .display {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .displayTL {
+            font-weight: 100;
+            font-size: 20rem;
+            margin: 0;
+            color: white;
+            text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.05);
+        }
+        .displayTR {
+            font-size: 4rem;
+            color: white;
+        }
+    }
 }
